--- a/Projet_Ajour/PAG.ui
+++ b/Projet_Ajour/PAG.ui
@@ -20,17 +20,17 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="5" column="0">
-    <widget class="QLabel" name="label_4">
+   <item row="12" column="0">
+    <widget class="QLabel" name="label_11">
      <property name="text">
-      <string>Rédacteur:</string>
+      <string>Type (PA/PS/RQ/NC)</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="0">
-    <widget class="QLabel" name="label_7">
+   <item row="27" column="0" rowspan="2">
+    <widget class="QPushButton" name="ButtonValide">
      <property name="text">
-      <string>Responsable service du secteur:</string>
+      <string>Valider</string>
      </property>
     </widget>
    </item>
@@ -50,149 +50,39 @@
      </property>
     </spacer>
    </item>
-   <item row="19" column="0">
-    <widget class="QLabel" name="label_14">
-     <property name="text">
-      <string>Commentaire(s):</string>
-     </property>
-    </widget>
-   </item>
-   <item row="17" column="0" rowspan="2" colspan="2">
-    <widget class="QTextEdit" name="Mesure">
-     <property name="markdown">
-      <string/>
-     </property>
-     <property name="html">
-      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-hr { height: 1px; border-width: 0; }
-li.unchecked::marker { content: &quot;\2610&quot;; }
-li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
-   </item>
-   <item row="23" column="0">
-    <widget class="QComboBox" name="ResponsableAction"/>
-   </item>
-   <item row="11" column="1">
-    <widget class="QLabel" name="label_10">
-     <property name="text">
-      <string>------------------------------------------</string>
-     </property>
-    </widget>
-   </item>
-   <item row="15" column="0" colspan="2">
-    <widget class="QTextEdit" name="Constat"/>
-   </item>
-   <item row="16" column="0">
-    <widget class="QLabel" name="label_13">
-     <property name="text">
-      <string>Mesure:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="1">
-    <widget class="QTextEdit" name="LignePoste">
-     <property name="html">
-      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-hr { height: 1px; border-width: 0; }
-li.unchecked::marker { content: &quot;\2610&quot;; }
-li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
-   </item>
-   <item row="20" column="0" rowspan="2" colspan="2">
-    <widget class="QTextEdit" name="Commentaire"/>
-   </item>
-   <item row="14" column="0">
-    <widget class="QLabel" name="label_12">
-     <property name="text">
-      <string>Constat:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="18" column="2">
-    <spacer name="verticalSpacer_5">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="4" column="0">
-    <widget class="QComboBox" name="OrigineAction"/>
-   </item>
-   <item row="23" column="1">
-    <widget class="QLineEdit" name="DelaieRealisation"/>
-   </item>
-   <item row="13" column="0">
-    <widget class="QComboBox" name="Type"/>
-   </item>
-   <item row="10" column="1">
-    <widget class="QLabel" name="label_9">
-     <property name="text">
-      <string>------------------------------------------</string>
-     </property>
-    </widget>
-   </item>
-   <item row="12" column="0">
-    <widget class="QLabel" name="label_11">
-     <property name="text">
-      <string>Type (PA/PS/RQ/NC)</string>
-     </property>
-    </widget>
-   </item>
-   <item row="25" column="0">
-    <widget class="QLineEdit" name="DateRealisation"/>
-   </item>
-   <item row="11" column="0">
-    <widget class="QLabel" name="label_8">
-     <property name="text">
-      <string>Responsable activité du secteur:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="0">
-    <widget class="QComboBox" name="Redacteur"/>
-   </item>
-   <item row="25" column="1">
-    <widget class="QLineEdit" name="EvaluationEfficacite"/>
-   </item>
-   <item row="7" column="1">
-    <widget class="QLabel" name="label_6">
-     <property name="text">
-      <string>Ligne/Poste:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="24" column="0">
-    <widget class="QLabel" name="label_16">
-     <property name="text">
-      <string>Date de réalisation:</string>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Type d'audit:</string>
      </property>
     </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Date:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="15" column="0" colspan="2">
+    <widget class="QTextEdit" name="Constat"/>
+   </item>
+   <item row="24" column="1">
+    <widget class="QLabel" name="label_17">
+     <property name="text">
+      <string>Evaluation de l'efficacité de l'action:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0">
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>Secteur:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="20" column="0" rowspan="2" colspan="2">
+    <widget class="QTextEdit" name="Commentaire"/>
    </item>
    <item row="2" column="0">
     <widget class="QComboBox" name="TypeAudit">
@@ -226,13 +116,23 @@ li.checked::marker { content: &quot;\2612&quot;; }
      </item>
     </widget>
    </item>
-   <item row="21" column="2">
-    <spacer name="verticalSpacer">
+   <item row="14" column="0">
+    <widget class="QLabel" name="label_12">
+     <property name="text">
+      <string>Constat:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0">
+    <widget class="QComboBox" name="Redacteur"/>
+   </item>
+   <item row="9" column="0">
+    <widget class="QComboBox" name="Secteur"/>
+   </item>
+   <item row="28" column="2">
+    <spacer name="verticalSpacer_4">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -242,55 +142,20 @@ li.checked::marker { content: &quot;\2612&quot;; }
      </property>
     </spacer>
    </item>
-   <item row="24" column="1">
-    <widget class="QLabel" name="label_17">
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Evaluation de l'efficacité de l'action:</string>
+      <string>Rédacteur:</string>
      </property>
     </widget>
    </item>
-   <item row="26" column="0">
-    <widget class="QPushButton" name="ButtonValide">
-     <property name="text">
-      <string>Valider</string>
-     </property>
-    </widget>
-   </item>
-   <item row="22" column="0">
-    <widget class="QLabel" name="label_15">
-     <property name="text">
-      <string>Responsable de l'action:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="0">
-    <widget class="QLabel" name="label_5">
-     <property name="text">
-      <string>Secteur:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="22" column="1">
-    <widget class="QLabel" name="label_18">
-     <property name="text">
-      <string>Délai de réalisation</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="Date"/>
+   <item row="25" column="0">
+    <widget class="QLineEdit" name="DateRealisation"/>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Origine de l'action:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Date:</string>
      </property>
     </widget>
    </item>
@@ -310,23 +175,184 @@ li.checked::marker { content: &quot;\2612&quot;; }
      </property>
     </spacer>
    </item>
-   <item row="9" column="0">
-    <widget class="QComboBox" name="Secteur"/>
+   <item row="23" column="0">
+    <widget class="QComboBox" name="ResponsableAction"/>
    </item>
-   <item row="26" column="1">
+   <item row="0" column="2">
+    <widget class="QLabel" name="ID">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="1">
+    <widget class="QTextEdit" name="LignePoste">
+     <property name="html">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+   </item>
+   <item row="24" column="0">
+    <widget class="QLabel" name="label_16">
+     <property name="text">
+      <string>Date de réalisation:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="17" column="0" rowspan="2" colspan="2">
+    <widget class="QTextEdit" name="Mesure">
+     <property name="markdown">
+      <string/>
+     </property>
+     <property name="html">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLineEdit" name="Date"/>
+   </item>
+   <item row="4" column="0">
+    <widget class="QComboBox" name="OrigineAction"/>
+   </item>
+   <item row="27" column="2">
+    <spacer name="verticalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="18" column="2">
+    <spacer name="verticalSpacer_5">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="22" column="1">
+    <widget class="QLabel" name="label_18">
+     <property name="text">
+      <string>Délai de réalisation</string>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="0">
+    <widget class="QLabel" name="label_7">
+     <property name="text">
+      <string>Responsable service du secteur:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="11" column="1">
+    <widget class="QLabel" name="label_10">
+     <property name="text">
+      <string>------------------------------------------</string>
+     </property>
+    </widget>
+   </item>
+   <item row="19" column="0">
+    <widget class="QLabel" name="label_14">
+     <property name="text">
+      <string>Commentaire(s):</string>
+     </property>
+    </widget>
+   </item>
+   <item row="25" column="1">
+    <widget class="QLineEdit" name="EvaluationEfficacite"/>
+   </item>
+   <item row="11" column="0">
+    <widget class="QLabel" name="label_8">
+     <property name="text">
+      <string>Responsable activité du secteur:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="21" column="2">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="10" column="1">
+    <widget class="QLabel" name="label_9">
+     <property name="text">
+      <string>------------------------------------------</string>
+     </property>
+    </widget>
+   </item>
+   <item row="23" column="1">
+    <widget class="QLineEdit" name="DelaieRealisation"/>
+   </item>
+   <item row="13" column="0">
+    <widget class="QComboBox" name="Type"/>
+   </item>
+   <item row="16" column="0">
+    <widget class="QLabel" name="label_13">
+     <property name="text">
+      <string>Mesure:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="1">
+    <widget class="QLabel" name="label_6">
+     <property name="text">
+      <string>Ligne/Poste:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="22" column="0">
+    <widget class="QLabel" name="label_15">
+     <property name="text">
+      <string>Responsable de l'action:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="27" column="1" rowspan="2">
     <widget class="QPushButton" name="BouttonModifier">
      <property name="styleSheet">
       <string notr="true"/>
      </property>
      <property name="text">
       <string>Modifier</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="2">
-    <widget class="QLabel" name="ID">
-     <property name="text">
-      <string/>
      </property>
     </widget>
    </item>
