--- a/Projet_Ajour/gestion.ui
+++ b/Projet_Ajour/gestion.ui
@@ -33,6 +33,14 @@
      <pointsize>10</pointsize>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">/*QPushButton {
+    background-color: red;
+	color: #ffffff; /* Couleur du texte (blanc dans cet exemple) 
+    border: none;
+}*/
+</string>
+   </property>
    <property name="text">
     <string>Accueil</string>
    </property>
