Ajout filtre du tableau hygiene

--- a/Projet_Ajour/hygiene.ui
+++ b/Projet_Ajour/hygiene.ui
@@ -64,7 +64,7 @@
     <rect>
      <x>230</x>
      <y>30</y>
-     <width>991</width>
+     <width>1141</width>
      <height>61</height>
     </rect>
    </property>
@@ -111,7 +111,7 @@
      <x>30</x>
      <y>90</y>
      <width>201</width>
-     <height>501</height>
+     <height>621</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -148,8 +148,8 @@
   <widget class="QPushButton" name="ButtonRestriction">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>650</y>
+     <x>60</x>
+     <y>730</y>
      <width>151</width>
      <height>51</height>
     </rect>
@@ -214,8 +214,8 @@
     <rect>
      <x>-10</x>
      <y>0</y>
-     <width>1421</width>
-     <height>841</height>
+     <width>1441</width>
+     <height>851</height>
     </rect>
    </property>
    <property name="text">
@@ -225,7 +225,7 @@
     <pixmap>Image_interface/Capture.PNG</pixmap>
    </property>
   </widget>
-  <widget class="QComboBox" name="comboBox">
+  <widget class="QComboBox" name="Filtre">
    <property name="geometry">
     <rect>
      <x>960</x>
@@ -235,8 +235,43 @@
     </rect>
    </property>
    <property name="currentText">
-    <string/>
+    <string>LABORATOIRE R&amp;D</string>
    </property>
+   <item>
+    <property name="text">
+     <string>LABORATOIRE R&amp;D</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>R&amp;D</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>MAGASIN APPRO</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>HYGIENE NETTOYAGE</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>CAVES R&amp;D</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>LABORATOIRE USINE</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>GARAGE</string>
+    </property>
+   </item>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
@@ -260,7 +295,7 @@
   <zorder>stackedWidget</zorder>
   <zorder>tableWidget</zorder>
   <zorder>tableWidget_2</zorder>
-  <zorder>comboBox</zorder>
+  <zorder>Filtre</zorder>
   <zorder>label_3</zorder>
  </widget>
  <resources/>
