Modification de l'interface graphique

--- a/Projet_Ajour/PAG.ui
+++ b/Projet_Ajour/PAG.ui
@@ -16,6 +16,21 @@
     <height>16777215</height>
    </size>
   </property>
+  <property name="styleSheet">
+   <string notr="true">
+    QWidget {
+    background-color: white;
+    }
+	QPushButton {
+        background-color: cyan;
+        color: black;
+        border-radius: 10px;
+        padding: 10px;
+        border: 1px solid red;
+        font-size: 14px;
+    }
+   </string>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -149,9 +164,6 @@
      </property>
     </widget>
    </item>
-   <item row="25" column="0">
-    <widget class="QLineEdit" name="DateRealisation"/>
-   </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
@@ -222,9 +234,6 @@ li.checked::marker { content: &quot;\2612&quot;; }
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="Date"/>
    </item>
    <item row="4" column="0">
     <widget class="QComboBox" name="OrigineAction"/>
@@ -355,6 +364,12 @@ li.checked::marker { content: &quot;\2612&quot;; }
       <string>Modifier</string>
      </property>
     </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QDateEdit" name="Date"/>
+   </item>
+   <item row="25" column="0">
+    <widget class="QDateEdit" name="DateRealisation"/>
    </item>
   </layout>
  </widget>
