--- a/Projet_Ajour/hygiene.ui
+++ b/Projet_Ajour/hygiene.ui
@@ -16,18 +16,16 @@
   <property name="styleSheet">
    <string notr="true">
     QPushButton {
-        background-color: #3498db;
+        background-color: red;
         color: white;
         border-radius: 10px;
         padding: 10px;
-        border: 1px solid #2980b9;
+        border: 1px solid red;
         font-size: 14px;
     }
     QPushButton:hover {
-        background-color: #2980b9;
-    }
-    QPushButton:pressed {
-        background-color: #1e6f93;
+        background-color: white;
+		color: red;
     }
     QLabel {
         font-size: 16px;
@@ -35,14 +33,14 @@
     }
     QTableWidget {
         background-color: white;
-        border: 1px solid #dcdcdc;
-        gridline-color: #dcdcdc;
+        border: 1px solid white;
+        gridline-color: red;
     }
     QTableWidget QHeaderView::section {
-        background-color: #3498db;
+        background-color: red;
         color: white;
         padding: 5px;
-        border: 1px solid #2980b9;
+        border: 1px solid white;
     }
    </string>
   </property>
@@ -177,9 +175,9 @@
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
-     <x>231</x>
+     <x>241</x>
      <y>91</y>
-     <width>731</width>
+     <width>711</width>
      <height>731</height>
     </rect>
    </property>
