--- a/Projet_Ajour/document.ui
+++ b/Projet_Ajour/document.ui
@@ -344,7 +344,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -355,7 +355,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -366,7 +366,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -377,7 +377,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -388,7 +388,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -399,7 +399,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -410,7 +410,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -421,7 +421,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -432,7 +432,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -443,7 +443,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -466,7 +466,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -477,7 +477,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -488,7 +488,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -499,7 +499,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -510,7 +510,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -521,7 +521,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -532,7 +532,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -543,7 +543,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -554,7 +554,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -565,7 +565,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -588,7 +588,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -599,7 +599,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -610,7 +610,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -621,7 +621,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -632,7 +632,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -643,7 +643,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -654,7 +654,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -665,7 +665,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -676,7 +676,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
@@ -687,7 +687,7 @@
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>crayon.png</normaloff>crayon.png</iconset>
+        <normaloff>Image_interface/crayon.png</normaloff>Image_interface/crayon.png</iconset>
       </property>
      </widget>
     </item>
