--- a/Projet_Ajour/gestion.ui
+++ b/Projet_Ajour/gestion.ui
@@ -37,10 +37,6 @@
         background-color: #FFFFFF;
         color: #D4211E;
     }
-    QLabel {
-        font-size: 20px;
-        color: #2c3e50;
-    }
     QTableWidget {
         background-color: white;
         border: 1px solid #dcdcdc;
@@ -65,10 +61,11 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="styleSheet">
+    <string/>
    </property>
    <property name="text">
     <string>Accueil</string>
@@ -85,7 +82,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="text">
@@ -103,7 +100,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="text">
@@ -121,7 +118,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="text">
@@ -139,7 +136,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="text">
@@ -157,7 +154,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>18</pointsize>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -427,7 +424,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="text">
@@ -461,7 +458,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="text">
@@ -504,7 +501,7 @@
    </property>
    <item>
     <property name="text">
-     <string>Acceuil</string>
+     <string>Accueil</string>
     </property>
    </item>
    <item>
