--- a/Projet_Ajour/hygiene.ui
+++ b/Projet_Ajour/hygiene.ui
@@ -143,7 +143,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="ButtonRestriction">
+  <widget class="QPushButton" name="ButtonRestriction1">
    <property name="geometry">
     <rect>
      <x>60</x>
